@@ -1,15 +1,29 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon 
 
-FROM openjdk:8-jre-slim
+FROM golang:1.18-alpine AS build
+
+
+WORKDIR /app
+
+
+COPY src/go.mod src/go.sum ./
+
+
+RUN go mod download
+
+
+COPY ./src .
+
+
+RUN go build -o myapp ./cmd/main.go
+
+
+FROM alpine:latest
+
 
 EXPOSE 8080
 
-RUN mkdir /app
 
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+COPY --from=build /app/myapp /usr/local/bin/myapp
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
 
+ENTRYPOINT ["myapp"]
